--- a/templates/hbs/bill.html.hbs
+++ b/templates/hbs/bill.html.hbs
@@ -74,141 +74,158 @@
     <h3><a href="http://localhost:8000/bill/blockchain/{{bill.name}}">Chain</a></h3>
 </div>
 
-{{#unless endorsed}}
-    {{#if (eq peer_id bill.payee.peer_id)}}
-        {{#unless payed}}
-            <form class="content" action="http://localhost:8000/bill/endorse" method="post">
-                <label for="endorsee">Endorsee:</label><br>
-                <input type="text" required="required" id="endorsee" name="endorsee" placeholder="Endorsee contact"><br>
-                <input hidden type="text" required="required" id="bill_name" name="bill_name" value="{{bill.name}}"
-                       placeholder="Bill name" readonly><br>
-                <input type="submit" id="button_submit" value="Endorse">
-            </form>
+{{#unless payed}}
+    {{#unless endorsed}}
+        {{#if (eq peer_id bill.payee.peer_id)}}
+            {{#unless payed}}
+                <form class="content" action="http://localhost:8000/bill/endorse" method="post">
+                    <label for="endorsee">Endorsee:</label><br>
+                    <input type="text" required="required" id="endorsee" name="endorsee" placeholder="Endorsee contact"><br>
+                    <input hidden type="text" required="required" id="bill_name" name="bill_name" value="{{bill.name}}"
+                           placeholder="Bill name" readonly><br>
+                    <input type="submit" id="button_submit" value="Endorse">
+                </form>
+            {{/unless}}
+            {{#if (eq operation_code codes.[2])}}
+                {{#unless accepted}}
+                    <form class="content" action="http://localhost:8000/bill/request_to_accept" method="post">
+                        <input hidden type="text" required="required" id="bill_name" name="bill_name"
+                               value="{{bill.name}}"
+                               placeholder="Bill name" readonly><br>
+                        <input type="submit" id="button_submit" value="Request to accept">
+                    </form>
+                {{/unless}}
+                {{#unless requested_to_pay}}
+                    <form class="content" action="http://localhost:8000/bill/request_to_pay" method="post">
+                        <input hidden type="text" required="required" id="bill_name" name="bill_name"
+                               value="{{bill.name}}"
+                               placeholder="Bill name" readonly><br>
+                        <input type="submit" id="button_submit" value="Request to pay">
+                    </form>
+                {{/unless}}
+            {{/if}}
+            {{#if (eq operation_code codes.[4])}}
+                {{#unless accepted}}
+                    <form class="content" action="http://localhost:8000/bill/request_to_accept" method="post">
+                        <input hidden type="text" required="required" id="bill_name" name="bill_name"
+                               value="{{bill.name}}"
+                               placeholder="Bill name" readonly><br>
+                        <input type="submit" id="button_submit" value="Request to accept">
+                    </form>
+                {{/unless}}
+                {{#unless requested_to_pay}}
+                    <form class="content" action="http://localhost:8000/bill/request_to_pay" method="post">
+                        <input hidden type="text" required="required" id="bill_name" name="bill_name"
+                               value="{{bill.name}}"
+                               placeholder="Bill name" readonly><br>
+                        <input type="submit" id="button_submit" value="Request to pay">
+                    </form>
+                {{/unless}}
+            {{/if}}
+            {{#if (eq operation_code codes.[0])}}
+                {{#unless payed}}
+                    <form class="content" action="http://localhost:8000/bill/request_to_accept" method="post">
+                        <input hidden type="text" required="required" id="bill_name" name="bill_name"
+                               value="{{bill.name}}"
+                               placeholder="Bill name" readonly><br>
+                        <input type="submit" id="button_submit" value="Request to accept">
+                    </form>
+                {{/unless}}
+                {{#unless payed}}
+                    <form class="content" action="http://localhost:8000/bill/request_to_pay" method="post">
+                        <input hidden type="text" required="required" id="bill_name" name="bill_name"
+                               value="{{bill.name}}"
+                               placeholder="Bill name" readonly><br>
+                        <input type="submit" id="button_submit" value="Request to pay">
+                    </form>
+                {{/unless}}
+            {{/if}}
+        {{/if}}
+    {{/unless}}
+
+    {{#if endorsed}}
+        {{#if (eq peer_id bill.endorsee.peer_id)}}
+            {{#unless payed}}
+                <form class="content" action="http://localhost:8000/bill/endorse" method="post">
+                    <label for="endorsee">Endorsee:</label><br>
+                    <input type="text" required="required" id="endorsee" name="endorsee" placeholder="Endorsee contact"><br>
+                    <input hidden type="text" required="required" id="bill_name" name="bill_name" value="{{bill.name}}"
+                           placeholder="Bill name" readonly><br>
+                    <input type="submit" id="button_submit" value="Endorse">
+                </form>
+            {{/unless}}
+            {{#if (eq operation_code codes.[2])}}
+                {{#unless accepted}}
+                    <form class="content" action="http://localhost:8000/bill/request_to_accept" method="post">
+                        <input hidden type="text" required="required" id="bill_name" name="bill_name"
+                               value="{{bill.name}}"
+                               placeholder="Bill name" readonly><br>
+                        <input type="submit" id="button_submit" value="Request to accept">
+                    </form>
+                {{/unless}}
+                {{#unless requested_to_pay}}
+                    <form class="content" action="http://localhost:8000/bill/request_to_pay" method="post">
+                        <input hidden type="text" required="required" id="bill_name" name="bill_name"
+                               value="{{bill.name}}"
+                               placeholder="Bill name" readonly><br>
+                        <input type="submit" id="button_submit" value="Request to pay">
+                    </form>
+                {{/unless}}
+            {{/if}}
+            {{#if (eq operation_code codes.[4])}}
+                {{#unless accepted}}
+                    <form class="content" action="http://localhost:8000/bill/request_to_accept" method="post">
+                        <input hidden type="text" required="required" id="bill_name" name="bill_name"
+                               value="{{bill.name}}"
+                               placeholder="Bill name" readonly><br>
+                        <input type="submit" id="button_submit" value="Request to accept">
+                    </form>
+                {{/unless}}
+                {{#unless requested_to_pay}}
+                    <form class="content" action="http://localhost:8000/bill/request_to_pay" method="post">
+                        <input hidden type="text" required="required" id="bill_name" name="bill_name"
+                               value="{{bill.name}}"
+                               placeholder="Bill name" readonly><br>
+                        <input type="submit" id="button_submit" value="Request to pay">
+                    </form>
+                {{/unless}}
+            {{/if}}
+            {{#if (eq operation_code codes.[0])}}
+                {{#unless payed}}
+                    <form class="content" action="http://localhost:8000/bill/request_to_accept" method="post">
+                        <input hidden type="text" required="required" id="bill_name" name="bill_name"
+                               value="{{bill.name}}"
+                               placeholder="Bill name" readonly><br>
+                        <input type="submit" id="button_submit" value="Request to accept">
+                    </form>
+                {{/unless}}
+                {{#unless payed}}
+                    <form class="content" action="http://localhost:8000/bill/request_to_pay" method="post">
+                        <input hidden type="text" required="required" id="bill_name" name="bill_name"
+                               value="{{bill.name}}"
+                               placeholder="Bill name" readonly><br>
+                        <input type="submit" id="button_submit" value="Request to pay">
+                    </form>
+                {{/unless}}
+            {{/if}}
+        {{/if}}
+    {{/if}}
+
+    {{#if (eq peer_id bill.drawee.peer_id)}}
+        {{#unless accepted}}
+            {{#unless payed}}
+                <form class="content" action="http://localhost:8000/bill/accept" method="post">
+                    <input hidden type="text" required="required" id="bill_name" name="bill_name" value="{{bill.name}}"
+                           placeholder="Bill name" readonly><br>
+                    <input hidden type="text" required="required" id="operation_code" name="operation_code"
+                           value="Accept"
+                           placeholder="Operation Code" readonly><br>
+                    <input type="submit" id="button_submit" value="Accept">
+                </form>
+            {{/unless}}
         {{/unless}}
-        {{#if (eq operation_code codes.[2])}}
-            {{#unless accepted}}
-                <form class="content" action="http://localhost:8000/bill/request_to_accept" method="post">
-                    <input hidden type="text" required="required" id="bill_name" name="bill_name" value="{{bill.name}}"
-                           placeholder="Bill name" readonly><br>
-                    <input type="submit" id="button_submit" value="Request to accept">
-                </form>
-            {{/unless}}
-            {{#unless requested_to_pay}}
-                <form class="content" action="http://localhost:8000/bill/request_to_pay" method="post">
-                    <input hidden type="text" required="required" id="bill_name" name="bill_name" value="{{bill.name}}"
-                           placeholder="Bill name" readonly><br>
-                    <input type="submit" id="button_submit" value="Request to pay">
-                </form>
-            {{/unless}}
-        {{/if}}
-        {{#if (eq operation_code codes.[4])}}
-            {{#unless accepted}}
-                <form class="content" action="http://localhost:8000/bill/request_to_accept" method="post">
-                    <input hidden type="text" required="required" id="bill_name" name="bill_name" value="{{bill.name}}"
-                           placeholder="Bill name" readonly><br>
-                    <input type="submit" id="button_submit" value="Request to accept">
-                </form>
-            {{/unless}}
-            {{#unless requested_to_pay}}
-                <form class="content" action="http://localhost:8000/bill/request_to_pay" method="post">
-                    <input hidden type="text" required="required" id="bill_name" name="bill_name" value="{{bill.name}}"
-                           placeholder="Bill name" readonly><br>
-                    <input type="submit" id="button_submit" value="Request to pay">
-                </form>
-            {{/unless}}
-        {{/if}}
-        {{#if (eq operation_code codes.[0])}}
-            {{#unless payed}}
-                <form class="content" action="http://localhost:8000/bill/request_to_accept" method="post">
-                    <input hidden type="text" required="required" id="bill_name" name="bill_name" value="{{bill.name}}"
-                           placeholder="Bill name" readonly><br>
-                    <input type="submit" id="button_submit" value="Request to accept">
-                </form>
-            {{/unless}}
-            {{#unless payed}}
-                <form class="content" action="http://localhost:8000/bill/request_to_pay" method="post">
-                    <input hidden type="text" required="required" id="bill_name" name="bill_name" value="{{bill.name}}"
-                           placeholder="Bill name" readonly><br>
-                    <input type="submit" id="button_submit" value="Request to pay">
-                </form>
-            {{/unless}}
-        {{/if}}
     {{/if}}
 {{/unless}}
-
-{{#if endorsed}}
-    {{#if (eq peer_id bill.endorsee.peer_id)}}
-        {{#unless payed}}
-            <form class="content" action="http://localhost:8000/bill/endorse" method="post">
-                <label for="endorsee">Endorsee:</label><br>
-                <input type="text" required="required" id="endorsee" name="endorsee" placeholder="Endorsee contact"><br>
-                <input hidden type="text" required="required" id="bill_name" name="bill_name" value="{{bill.name}}"
-                       placeholder="Bill name" readonly><br>
-                <input type="submit" id="button_submit" value="Endorse">
-            </form>
-        {{/unless}}
-        {{#if (eq operation_code codes.[2])}}
-            {{#unless accepted}}
-                <form class="content" action="http://localhost:8000/bill/request_to_accept" method="post">
-                    <input hidden type="text" required="required" id="bill_name" name="bill_name" value="{{bill.name}}"
-                           placeholder="Bill name" readonly><br>
-                    <input type="submit" id="button_submit" value="Request to accept">
-                </form>
-            {{/unless}}
-            {{#unless requested_to_pay}}
-                <form class="content" action="http://localhost:8000/bill/request_to_pay" method="post">
-                    <input hidden type="text" required="required" id="bill_name" name="bill_name" value="{{bill.name}}"
-                           placeholder="Bill name" readonly><br>
-                    <input type="submit" id="button_submit" value="Request to pay">
-                </form>
-            {{/unless}}
-        {{/if}}
-        {{#if (eq operation_code codes.[4])}}
-            {{#unless accepted}}
-                <form class="content" action="http://localhost:8000/bill/request_to_accept" method="post">
-                    <input hidden type="text" required="required" id="bill_name" name="bill_name" value="{{bill.name}}"
-                           placeholder="Bill name" readonly><br>
-                    <input type="submit" id="button_submit" value="Request to accept">
-                </form>
-            {{/unless}}
-            {{#unless requested_to_pay}}
-                <form class="content" action="http://localhost:8000/bill/request_to_pay" method="post">
-                    <input hidden type="text" required="required" id="bill_name" name="bill_name" value="{{bill.name}}"
-                           placeholder="Bill name" readonly><br>
-                    <input type="submit" id="button_submit" value="Request to pay">
-                </form>
-            {{/unless}}
-        {{/if}}
-        {{#if (eq operation_code codes.[0])}}
-            {{#unless payed}}
-                <form class="content" action="http://localhost:8000/bill/request_to_accept" method="post">
-                    <input hidden type="text" required="required" id="bill_name" name="bill_name" value="{{bill.name}}"
-                           placeholder="Bill name" readonly><br>
-                    <input type="submit" id="button_submit" value="Request to accept">
-                </form>
-            {{/unless}}
-            {{#unless payed}}
-                <form class="content" action="http://localhost:8000/bill/request_to_pay" method="post">
-                    <input hidden type="text" required="required" id="bill_name" name="bill_name" value="{{bill.name}}"
-                           placeholder="Bill name" readonly><br>
-                    <input type="submit" id="button_submit" value="Request to pay">
-                </form>
-            {{/unless}}
-        {{/if}}
-    {{/if}}
-{{/if}}
-
-{{#if (eq peer_id bill.drawee.peer_id)}}
-    {{#if (eq operation_code codes.[3])}}
-        <form class="content" action="http://localhost:8000/bill/accept" method="post">
-            <input hidden type="text" required="required" id="bill_name" name="bill_name" value="{{bill.name}}"
-                   placeholder="Bill name" readonly><br>
-            <input hidden type="text" required="required" id="operation_code" name="operation_code" value="Accept"
-                   placeholder="Operation Code" readonly><br>
-            <input type="submit" id="button_submit" value="Accept">
-        </form>
-    {{/if}}
-{{/if}}
 </body>
 <footer>
     {{> hbs/footer}}
