--- a/templates/hbs/nav.html.hbs
+++ b/templates/hbs/nav.html.hbs
@@ -8,12 +8,12 @@
 <img id="navbar-logo" src="http://localhost:8000/image/logo_long_blackback.png" alt="logo">
     <ul class="menu-main">
         <li><a href="http://localhost:8000/">Home</a></li>
-        <li><a href="http://localhost:8000/issue_bill/">Issue new bill</a></li>
+<!--        <li><a href="http://localhost:8000/issue_bill/">Issue new bill</a></li>-->
+        <li><a href="http://localhost:8000/frontend/">Frontend</a></li>
         <li><a href="http://localhost:8000/contacts/add">Add contact</a></li>
         <li><a href="http://localhost:8000/bill/dht">Find new bills</a></li>
         <li><a href="http://localhost:8000/identity">Identity</a></li>
         <li><a href="http://localhost:8000/contacts">Contacts</a></li>
-        <li><a href="http://localhost:8000/bills">Bills</a></li>
         <li><a href="http://localhost:8000/info">Info</a></li>
         <li><a href="http://localhost:8000/exit">Exit</a></li>
     </ul>
