--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -409,6 +409,9 @@ select:focus {
           flex: 1 0 0;
 
           .name {
+            overflow: hidden;
+            width: calcView(180) !important;
+            text-overflow: ellipsis;
             color: #151515;
             font-family: Poppins;
             font-size: calcView(20);
@@ -438,7 +441,7 @@ select:focus {
             font-size: calcView(20);
             font-style: normal;
             font-weight: 500;
-            line-height: normal;
+            line-height: calcView(20);
           }
 
           .red {
@@ -449,9 +452,10 @@ select:focus {
             color: #151515;
             font-family: Poppins;
             font-size: calcView(20);
+
             font-style: normal;
             font-weight: 500;
-            line-height: normal;
+            line-height: calcView(20);
           }
         }
       }
@@ -463,7 +467,8 @@ select:focus {
         flex-direction: column;
         align-items: center;
         gap: calcView(5);
-
+        user-select: none;
+        cursor: pointer;
         .payments {
           color: #898989;
           font-family: Poppins;
