--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -585,6 +585,7 @@ select:focus {
     &-holder {
       @include flexCenter();
       gap: calcView(5);
+      text-transform: uppercase;
 
       .colored {
         color: $PrimaryColor;
@@ -599,7 +600,7 @@ select:focus {
 
 .accept {
   width: 100%;
-
+  overflow-y: auto;
   &-container {
     width: 100%;
     height: calcView(583);
@@ -611,12 +612,14 @@ select:focus {
       flex-direction: column;
     }
   }
+  .endorse-select {
+    max-width: 100%;
+    width: 100%;
+  }
 }
 
 .Repay {
   display: block;
-  margin: calcView(65) calcView(23);
-
   .select-opt {
     width: calcView(300);
   }
@@ -1241,13 +1244,13 @@ select:focus {
 }
 
 .popup {
+  z-index: 99;
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   background: $White;
-  padding-top: calcView(45);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -1258,7 +1261,7 @@ select:focus {
     justify-content: space-between;
     width: calcView(382);
     height: calcView(48);
-
+    margin-top: calcView(45);
     &-title {
       margin-top: calcView(2);
       text-transform: uppercase;
