--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -348,6 +348,75 @@ select:focus {
   background: white;
   border-radius: calcView(6);
 }
+.key {
+  margin-top: calcView(20);
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  &-icon {
+    width: calcView(100);
+    height: calcView(100);
+    @include flexCenter();
+    border: calcView(7) solid black;
+    border-radius: calcView(99);
+    &-svg {
+      width: calcView(42);
+      height: calcView(42);
+      path {
+        width: calcView(42);
+        height: calcView(42);
+        fill: black;
+      }
+    }
+  }
+  .payed {
+    border: calcView(7) solid #00923a;
+    svg {
+      path {
+        fill: #00923a;
+      }
+    }
+  }
+  .request {
+    border: calcView(7) solid #c30000;
+    svg {
+      path {
+        fill: #c30000;
+      }
+    }
+  }
+  .pending {
+    border: calcView(7) solid #c30000;
+    svg {
+      path {
+        fill: black;
+      }
+    }
+  }
+  .lessthenthree {
+    border: calcView(7) solid #c30000;
+    svg {
+      path {
+        fill: #f7931a;
+      }
+    }
+  }
+  &-text {
+    font-size: calcView(16);
+    font-weight: 600;
+  }
+  &-confirmation {
+    font-size: calcView(16);
+    vertical-align: middle;
+    img {
+      margin-left: calcView(5);
+      width: calcView(16);
+      height: calcView(16);
+      vertical-align: middle;
+    }
+  }
+}
 
 .home {
   width: 90%;
@@ -1302,6 +1371,172 @@ select:focus {
   }
 }
 
+.error {
+  width: 100%;
+  height: 100vh;
+  background: #000;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  padding-bottom: calcView(50);
+  &-head {
+    margin-top: calcView(45);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: calcView(382);
+    height: calcView(48);
+
+    &-title {
+      margin-top: calcView(2);
+      text-transform: uppercase;
+      font-weight: 600;
+      font-size: calcView(23);
+      line-height: calcView(23);
+    }
+    .close-btn {
+      path {
+        fill: white;
+        z-index: 2;
+      }
+      rect {
+        z-index: 1;
+        fill: black;
+      }
+    }
+  }
+  &-body {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: calcView(385);
+    &-text {
+      margin-top: calcView(100);
+      flex-grow: 1;
+      display: flex;
+      flex-direction: column;
+      gap: calcView(40);
+      span {
+        color: white;
+      }
+      &-h1 {
+        font-size: calcView(116);
+        font-weight: 600;
+      }
+      &-h2 {
+        font-size: calcView(32);
+        font-weight: 600;
+      }
+      &-p {
+        font-size: calcView(20);
+      }
+    }
+    .btn {
+      width: 100%;
+      background: #f7931a;
+      color: #151515;
+      font-weight: 700;
+    }
+  }
+}
+.contact {
+  margin: 0 calcView(21);
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  gap: calcView(30);
+  padding-bottom: calcView(50);
+  &-head {
+    margin-top: calcView(45);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: calcView(382);
+    height: calcView(48);
+
+    &-title {
+      margin-top: calcView(2);
+      text-transform: uppercase;
+      font-weight: 600;
+      font-size: calcView(23);
+      line-height: calcView(23);
+    }
+    .close-btn {
+      path {
+        fill: white;
+        z-index: 2;
+      }
+      rect {
+        z-index: 1;
+        fill: black;
+      }
+    }
+  }
+  &-body {
+    flex-grow: 1;
+    width: 100%;
+    overflow: auto;
+    display: flex;
+    flex-direction: column;
+    justify-items: start;
+    align-content: start;
+    gap: calcView(10);
+
+    &-user {
+      width: 100%;
+      background: #fff;
+      padding: calcView(30) calcView(20);
+      height: calcView(54);
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      border-radius: calcView(8);
+    }
+  }
+}
+.add-contact {
+  .contact-body {
+    gap: calcView(30);
+  }
+  input {
+    height: calcView(56);
+    border: none;
+    outline: none;
+    background: #ebebeb;
+    border-radius: calcView(10);
+    padding: 0 calcView(20);
+    font-size: calcView(16);
+  }
+  input:focus {
+    border: calcView(4) solid #f7931a;
+  }
+
+  .btn {
+    height: calcView(64);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: calcView(10);
+    span {
+      font-size: calcView(21);
+      line-height: calcView(21);
+    }
+    img {
+      display: inline;
+      vertical-align: middle;
+      width: calcView(18);
+      height: calcView(18);
+      margin-bottom: calcView(2);
+    }
+  }
+}
+.btn {
+  width: 100%;
+}
 .popup {
   z-index: 99;
   position: fixed;
@@ -1380,4 +1615,50 @@ select:focus {
 .see-more-btn {
   color: $Black;
   font-size: calcView(20);
+}
+
+@keyframes loading {
+  0% {
+    transform: translate(-50%, -50%) rotate(0deg);
+  }
+  100% {
+    transform: translate(-50%, -50%) rotate(360deg);
+  }
+}
+.loading div {
+  position: absolute;
+  width: calcView(60);
+  height: calcView(60);
+  border: calcView(8) solid #f7931a;
+  border-top-color: transparent;
+  border-radius: 50%;
+}
+.loading div {
+  animation: loading 0.7246376811594202s linear infinite;
+  top: calcView(100);
+  left: calcView(100);
+}
+.loading-sub {
+  width: calcView(200);
+  height: calcView(200);
+  display: inline-block;
+  overflow: hidden;
+}
+.loading-main {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.loading {
+  width: calcView(200);
+  height: calcView(200);
+  position: relative;
+  transform: translateZ(0) scale(1);
+  backface-visibility: hidden;
+  transform-origin: 0 0; /* see note above */
+}
+.loading div {
+  box-sizing: content-box;
 }
